--- a/packages/elements/src/components/ino-input/ino-input.scss
+++ b/packages/elements/src/components/ino-input/ino-input.scss
@@ -61,7 +61,7 @@ ino-input {
       .mdc-text-field__icon {
         cursor: auto;
         pointer-events: auto;
-        bottom: 8px;
+        bottom: 2px;
       }
 
       &[class*='--with-leading-icon'] {
